Fix gap problem

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -963,6 +963,7 @@ h2 {
 }
 
 .blogpost-content img {
+  display: block;
   max-width: 100%;
 }
 
